# r36s-input-demo

./: Cargo.toml  README.md  config.toml
.cargo/: config.toml
src/: joystick.rs  main.rs  tui.rs
